# oracle-workshop

./: .gitignore  .gitmodules  Cargo.toml  README.md  lib.rs
advanced_judger/: Cargo.toml  lib.rs
easy_oracle/: Cargo.toml  lib.rs  utils.rs
fat_badges/: Cargo.toml  lib.rs
scripts/: build.sh  collect-bin.sh
scripts/js/: package.json
scripts/js/src/: common.js  deploy.js  e2e.js  utils.js
utils/: Cargo.toml
utils/environmental/: Cargo.toml
utils/environmental/src/: lib.rs
utils/src/: attestation.rs  lib.rs  test_helper.rs
