[package]
name = "easy_oracle"
version = "0.1.0"
authors = ["Hang Yin <hangyin@phala.network>"]
edition = "2021"

[dependencies]
ink_prelude = { version = "3", default-features = false }
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

openbrush = { path = "../vendor/openbrush-contracts", version = "~2.1.0", default-features = false }
pink-extension = { version = "0.1.17", default-features = false }
pink-utils = { version = "0.1", default-features = false }

fat_badges = { path = "../fat_badges", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
environmental = { path = "../utils/environmental", default-features = false }
pink-extension-runtime = "0.1.3"

[lib]
name = "easy_oracle"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "openbrush/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "pink-utils/std",
    "fat_badges/std",
]
ink-as-dependency = []
mockable = [
    "fat_badges/mockable",
    "openbrush/mockable",
]
